ci: Fixed external dependencies in tests partially